# sec21

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CTestConfig.cmake  LICENSE  LICENSE.txt  README.md  appveyor.yml  index.html  mkdocs.yml  sec21Config.cmake  testall.ps1  vcpkg.json
.github/workflows/: clang.yml  clang12.yml  cmake.yml  codecov.yml  codeql.yml  deployment.frontend.yml  docs.yml  gcc.yml  gcc11.yml  msvc.yml  test.frontend.yml
api/all_of-any_of/: index.html
api/arity/: index.html
api/array_qvm_vec_traits/: index.html
api/bit_pattern/: index.html
api/blob/: index.html
api/concat/: index.html
api/contains/: index.html
api/eventsystem/: index.html
api/expects/: index.html
api/fixed_string/: index.html
api/for_each_adjacent/: index.html
api/for_each_chunk/: index.html
api/for_each_indexed/: index.html
api/index_of/: index.html
api/instance_of/: index.html
api/is_specialized/: index.html
api/is_std_string/: index.html
api/is_tuple/: index.html
api/json_serializer/: index.html
api/limited_quantity/: index.html
api/member_pointer_traits/: index.html
api/memory/: index.html
api/overloaded/: index.html
api/scope_guard/: index.html
api/split_if/: index.html
api/strong_type/: index.html
api/to_array/: index.html
api/transform/: index.html
api/transform_if/: index.html
api/validate/: index.html
api/zip/: index.html
backend/: .gitignore  README.md  package.json
backend/src/: index.ts  routes.ts
benchmarks/: CMakeLists.txt  boilerplate.h.in
benchmarks/expression_templates/: 2020-11-05_expression_templates.html  2021-01-05_expression_templates.html  CMakeLists.txt  expression_templates.cpp
benchmarks/structural_analysis.solve/: CMakeLists.txt  structural_analysis.solve.cpp
benchmarks/structural_analysis.space_struss.solver.backend/: CMakeLists.txt  structural_analysis.space_struss.solver.backend.cpp
cmake/: CompilerWarnings.cmake  DependencyGraph.cmake  Doxygen.cmake  FindCatch.cmake  FindCoroutines.cmake  Findsigntool.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Vcpkg.cmake  sec21Config.cmake  sign.cmake
csv-writer/: index.html
data/: example_1.json  example_1_temperature_load.json  example_2.json  example_2_load.json  example_2_temperature_load.json  example_3.json  example_3_load.json  example_4.json  example_4_load.json  example_5.json  example_5_load.json  example_6.json  example_6_load.json  example_7.json  example_7_load.json  test_data_units.json
docs/: arity.md  csv-writer.md  index.md  reflection.md  sql-database-support.md  type-traits.md  units.md
docs/api/: all_any_of.md  all_of-any_of.md  arity.md  array_qvm_vec_traits.md  bit_pattern.md  blob.md  concat.md  contains.md  database.md  eventsystem.md  expects.md  fixed_string.md  for_each_adjacent.md  for_each_chunk.md  for_each_indexed.md  index_of.md  instance_of.md  is_specialized.md  is_std_string.md  is_tuple.md  json_serializer.md  limited_quantity.md  member_pointer_traits.md  (+11 more)
editor/backend/: CMakeLists.txt  command_add_member.h  command_add_node.h  command_add_support.h  command_loadfile.h  config.h.in  editor.backend.cpp  invoke.h  response.h  server.h  session.h
editor/backend/tests/: CMakeLists.txt  command.add_member.cpp  command.add_node.cpp  command.add_support.cpp  command.loadfile.cpp
frontend/: .env.production  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
fuzzing/: CMakeLists.txt  boilerplate.h  broken_parser.cpp  simple.cpp
http_connection/: CMakeLists.txt  README.md  config.h.in
http_connection/include/: http_connection.h
http_connection/include/sec21/: http_connection.h
http_connection/src/: http_connection.cpp
logger/: CMakeLists.txt  README.md  config.h.in
logger/include/sec21/log/: entry.h  logger.h
logger/src/: base_logger.h  console_logger.cpp  console_logger.h  database_logger.cpp  database_logger.h  file_logger.cpp  file_logger.h  logger.cpp  registry.h  string_loger.cpp  string_loger.h
logger/tests/: CMakeLists.txt  entry.cpp
make_readme/: CMakeLists.txt  README.md  config.h.in  make_readme.cpp
orm_compiler/: CMakeLists.txt  README.md  config.h.in  entity.h  orm_compiler.cpp
orm_compiler/tests/: CMakeLists.txt  parse_columns.cpp
reflection/: index.html
search/: search_index.json
sql-database-support/: index.html
test/: CMakeLists.txt  ranges.cpp  structural_analysis_force.cpp  structural_analysis_framework.cpp
tests/: CMakeLists.txt  aabb.cpp  access.cpp  all_of.cpp  alphabet.cpp  any_of.cpp  approx_equal.h  arity.cpp  bit_pattern.cpp  blob.cpp  cache.cpp  catch_main.cpp  combine.cpp  compose.cpp  concat.cpp  contains.cpp  curry.cpp  database.column_type.cpp  database.constraints.cpp  database.query.cpp  debug_timer.cpp  disk_space.cpp  dispatcher.cpp  double_values.cpp  drawdown.cpp  enclose.cpp  entity_manager.cpp  enum_names.cpp  enum_to_string.cpp  enumerate.cpp  erase_if_index.cpp  event.input_manager.cpp  expects.cpp  features.cpp  fixed_string.cpp  flat_matrix.cpp  flat_vector.cpp  for_each_adjacent.cpp  for_each_chunk.cpp  for_each_indexed.cpp  (+77 more)
tests/data/: test_properties2.json
type-traits/: index.html
unit_test/: main.cpp  test_array_ext.cpp
units/: index.html
viewer/: CMakeLists.txt  README.md  aabb.h  camera.h  config.h.in  debug_data.h  debug_output_opengl.h  events.h  gui.h  handles.h  initialize_sdl_opengl3.h  input_data.h  intersection.h  make_axis.h  make_camera.h  make_load.h  make_member.h  make_node.h  make_support.h  material.h  model_transform.h  position.h  preferences.h  ray.h  read_file.h  selectable.h  shader.h  sphere.h  tags.h  transformation.h  vertex.h  vertex_buffer.h  vertex_buffer_id.h  viewable.h  viewer.cpp
viewer/data/: camera.json  settings.json  shader1.fs  shader1.vs
viewer/mesh_converter/: CMakeLists.txt  config.h.in  mesh_converter.cpp
viewer/tests/: CMakeLists.txt  intersection.cpp
viewer/vertex_factory/: generated_arrow.h  generated_cylinder.h  generated_sphere.h  generated_support_fixed.h  generated_support_roller.h
(+316 files in other folders)
