find_package(Catch2 CONFIG REQUIRED)
find_package(Boost 1.70 REQUIRED)
find_package(fmt REQUIRED)

## speed up the compile-time process
add_library(catch_main STATIC catch_main.cpp)
target_link_libraries(catch_main PUBLIC Catch2::Catch2 Catch2::Catch2WithMain)

function(test filename)
    set(test_project_name test.${filename})
    add_executable(${test_project_name})

    target_sources(${test_project_name} PRIVATE ${filename}.cpp)

    target_compile_features(${test_project_name} PRIVATE cxx_std_20)

    target_link_libraries(${test_project_name} PRIVATE Boost::boost)
    target_link_libraries(${test_project_name} PRIVATE fmt::fmt-header-only)
    target_link_libraries(${test_project_name} PRIVATE catch_main)
    target_link_libraries(${test_project_name} PRIVATE sec21::sec21)
    target_link_libraries(${test_project_name} PRIVATE enable_compiler_warnings)

    add_test(
            NAME ${test_project_name}
            COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${test_project_name})
endfunction()

## unit tests via catch (alphabetical order)
test("all_of")
test("alphabet")
test("any_of")
test("arity")
test("bit_pattern")
test("concat")
test("database.column_type")
test("database.constraints")
test("database.query")
test("debug_timer")
test("dispatcher")
test("double_values")
test("drawdown")
test("enumerate")
test("erase_if_index")
test("flat_vector")
test("for_each_adjacent")
test("for_each_chunk")
test("for_each_indexed")
test("make_iota_array")
test("math")
test("min_absent")
test("numeric.flatten")
test("numeric.make_matrix")
test("numeric.make_vector")
test("reflection.enum_to_string")
test("reflection.get_column")
test("resource")
test("scope_guard")
test("split_if")
test("strong_type")
test("timestamp")
test("transform")
test("transform_if")
test("to_array")
test("type_traits.has_type")
test("type_traits.index_of")
test("type_traits.is_specialized")
test("type_traits.is_std_string")
test("type_traits.is_tuple")
test("units.dimension")
test("units.quantity")
test("units.ratio")
test("validate")
test("write_csv")
test("zip")


if (ENABLE_WORK_IN_PROGRESS)
    # test("curry")
    # test("actor_lib_feature")
    test("geometry.aabb")
    test("geometry.polygon")
    test("chaining")
    test("coroutines")
    test("demux")
    test("dictionary")
    test("dimap")
    test("disk_space")
    test("entity_manager")
    # test("event.input_manager")
    test("features.concepts")
    test("features.coroutines")
    # test("features.concurrency")
    test("features.perfect_forwarding")
    test("features.type_traits")
    test("geometry")
    test("literal_template")
    test("log")
    test("material")
    test("pipeable")
    test("pipe")
    test("process")
    test("quadradic_matrix_plotter")
    test("ranges")
    # test("reflection")
    test("replay_manager")
    # test("sat_sudoku")
    test("serializer")
    test("snake_ladders")
    test("strange_heap")
    test("synchronized")
    test("system_reader")
    # test("tasks")
    test("test_framework")
    # test("thread_shared_state")
endif ()
